update the admin interface

--- a/index.html
+++ b/index.html
@@ -347,6 +347,11 @@ footer {
         <header>
             <h1>Gilbert Garcia</h1>
             <p class="subtitle">Engineering elegant solutions to complex problems</p>
+            <div style="margin-top: 1rem;">
+                <a href="/admin.html" style="color: #8b5cf6; text-decoration: none; font-size: 0.9rem; padding: 0.5rem 1rem; background: rgba(139, 92, 246, 0.1); border-radius: 8px; display: inline-block;">
+                    🔐 Admin
+                </a>
+            </div>
         </header>
         
         <main>
@@ -369,12 +374,15 @@ footer {
         <footer>
             <div class="footer-content">
                 <p>© 2024 Gilbert Garcia · Crafted with passion</p>
+                <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 0.5rem;">
+                    Admin panel available locally only · <a href="https://github.com/gilbergarcia/gilbergarcia.com#-local-admin-system" style="color: inherit; text-decoration: underline;">Learn more</a>
+                </p>
             </div>
             <div class="social-links">
-                <a href="#" title="GitHub">GH</a>
-                <a href="#" title="LinkedIn">LI</a>
-                <a href="#" title="Twitter">TW</a>
-                <a href="#" title="Email">@</a>
+                <a href="https://github.com/gilbergarcia" title="GitHub">GH</a>
+                <a href="https://linkedin.com/in/gilbergarcia" title="LinkedIn">LI</a>
+                <a href="https://twitter.com/gilbergarcia" title="Twitter">TW</a>
+                <a href="mailto:contact@gilbergarcia.com" title="Email">@</a>
             </div>
         </footer>
     </div>
