--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gilbert Garcia</title>
-    <meta name="description" content="Personal blog by Gilbert Garcia">
+    <title>Gilber Garcia</title>
+    <meta name="description" content="Personal blog by Gilber Garcia">
     <style>@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Merriweather:wght@300;400&display=swap');
 
 * {
@@ -346,7 +346,7 @@ footer {
     <div class="container">
         <header>
             <h1>Gilbert Garcia</h1>
-            <p class="subtitle">Engineering elegant solutions to complex problems</p>
+            <p class="subtitle">Welcome to my blog! This is where I share my thoughts, ideas, and personal takes on everything tech. If you're into innovation, gadgets, or just curious about the digital world — you're in the right place.</p>
             <div style="margin-top: 1rem;">
                 <a href="/admin.html" style="color: #8b5cf6; text-decoration: none; font-size: 0.9rem; padding: 0.5rem 1rem; background: rgba(139, 92, 246, 0.1); border-radius: 8px; display: inline-block;">
                     🔐 Admin
@@ -360,7 +360,7 @@ footer {
 
         <footer>
             <div class="footer-content">
-                <p>© 2024 Gilbert Garcia · Crafted with passion</p>
+                <p>Gilber Garcia · Made with passion</p>
                 <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 0.5rem;">
                     Write posts in <a href="/admin.html" style="color: inherit; text-decoration: underline;">admin panel</a>
                 </p>
