--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ article:hover::before {
 }
 
 .post-date::before {
-  content: '📅';
+  content: '🗓️';
   font-size: 1rem;
 }
 
@@ -345,7 +345,7 @@ footer {
 <body>
     <div class="container">
         <header>
-            <h1>Gilbert Garcia</h1>
+            <h1>Gilber Garcia</h1>
             <p class="subtitle">Welcome to my blog! This is where I share my thoughts, ideas, and personal takes on everything tech. If you're into innovation, gadgets, or just curious about the digital world — you're in the right place.</p>
             <div style="margin-top: 1rem;">
                 <a href="/admin.html" style="color: #8b5cf6; text-decoration: none; font-size: 0.9rem; padding: 0.5rem 1rem; background: rgba(139, 92, 246, 0.1); border-radius: 8px; display: inline-block;">
